.provarCaches/00Df2000001KKNJEA4/objects/Incap311API__X311_API_Log__e.object
<CustomObject>
    <fields>
        <fullName>Incap311API__Exception__c</fullName>
        <label>Exception</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311API__Log_ID__c</fullName>
        <label>Log ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311API__Log_Level__c</fullName>
        <label>Log Level</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311API__Log_Message__c</fullName>
        <label>Log Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311API__Log_Time__c</fullName>
        <label>Log Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Incap311API__Request__c</fullName>
        <label>Request</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311API__Response__c</fullName>
        <label>Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311API__Service_Type__c</fullName>
        <label>Service Type</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311API__User_Details__c</fullName>
        <label>User Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311API__User__c</fullName>
        <label>User</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311API__Vendor__c</fullName>
        <label>Vendor</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>311 API Log</label>
    <pluralLabel>311 API Logs</pluralLabel>
</CustomObject>